--- a/project2/project2.css
+++ b/project2/project2.css
@@ -24,13 +24,31 @@ body{
   left: 167px;
   top:30px;
   z-index: 2;
-  animation: move 2s ease;
+  animation: move 100s linear;
   animation-delay: 2s;
 }
 
 @keyframes move{
     0% { transform: translateX(0px); }
-    100% { transform: translateX(125px);}
+    0.1% { transform: translateX(125px);}
+    0.5%{ transform: translateX(125px);}
+    1% { transform: translate(250px, 35px);}
+    1.5%{ transform: translate(260px, 25px);}
+    3.5%{ transform: translate(290px, 70px);}
+    4%{ transform: translate(260px,100px);}
+    6%{ transform: translate(250px, 145px);}
+    6.5%{ transform: translate(360px, 145px);}
+    8%{ transform: translate(430px, 90px);}
+    11%{ transform: translate(420px, 0px);}
+    15%{ transform: translate(575px, 0px);}
+    17%{ transform: translate(555px, 70px);}
+    19%{ transform: translate(585px, 105px);}
+    20%{ transform: translate(660px, 105px);}
+    24%{ transform: translate(665px, 265px);}
+    27%{ transform: translate(800px, 265px);}
+    28%{ transform: translate(820px, 240px);}
+    29%{ transform: translate(800px, 210px);}
+    100% { transform: translateY(900px);}
 }
 
 
