--- a/designforpersonalarchive.css
+++ b/designforpersonalarchive.css
@@ -1,3 +1,7 @@
+*{
+  margin: 0;
+}
+
 h1{
    font-family: "Stencil Std" ;
    font-size: 72px;
@@ -12,4 +16,7 @@ h2{
    text-align: center;
    background: rgba(250, 173, 172, .5);
    width: 200px;
+   margin: 0px auto;
+   margin-top: 10px;
+   margin-bottom: 10px;
 }
