--- a/project2/project2.css
+++ b/project2/project2.css
@@ -7,6 +7,18 @@ body{
   width: 30px;
   border-radius: 100%;
   background: red;
+  animation: colorchange 100s linear;
+}
+
+@keyframes colorchange{
+  0% { background-color: red;}
+  18% { background-color: red;}
+  24% { background-color: pink;}
+  46% { background-color: pink;}
+  52% { background-color: rgb(248, 155, 8);}
+  78% { background-color: rgb(248, 155, 8);}
+  82% { background-color: rgb(174, 136, 3);}
+  100% { background-color: rgb(108, 70, 10);}
 }
 
 .stick{
@@ -71,7 +83,8 @@ body{
     90.5%{ transform: translate(2140px, 430px);}
     92%{ transform: translate(2000px, 430px);}
     95%{ transform: translate(2140px, 640px);}
-    100% { transform: translate(2260px,540px);}
+    97% { transform: translate(2240px,550px);}
+    100% { transform: translate(2240px,550px);}
 }
 
 
