--- a/project2/project2.css
+++ b/project2/project2.css
@@ -3046,6 +3046,368 @@ body{
   left: 3400px;
 }
 
+p{
+  color: rgb(160, 160, 160);
+  font-family: "American Typewriter";
+}
+
+
+.content1{
+  width: 50px;
+  height: 100px;
+  position: absolute;
+  left: 2340px;
+  font-size: 40px;
+  top: 440px;
+  font-family: "Century Gothic";
+  color: rgb(100, 100, 100);
+  line-height: 35px;
+  display: none;
+}
+.content2{
+  position: absolute;
+  left: 2450px;
+  top: 310px;
+  width: 650px;
+  font-family: "Century Gothic";
+  font-size: 35px;
+  color: rgb(130, 130, 130);
+  display: none;
+}
+.content3{
+  width: 550px;
+  position: absolute;
+  left: 2450px;
+  top: 180px;
+  font-size: 60px;
+  font-family: 'Century Gothic';
+  color: rgb(170, 170, 170);
+  display: none;
+}
+.content4{
+ position: absolute;
+ left: 1770px;
+ font-family: "Century Gothic";
+ font-size: 100px;
+ top: 0px;
+ color: rgb(160, 160, 160);
+ display: none;
+}
+.content5{
+  position: absolute;
+  left: 2330px;
+  top: 225px;
+  width: 200px;
+  font-size: 35px;
+  transform: rotate(-90deg);
+  font-family: 'Century Gothic';
+  color: rgb(170, 170, 170);
+  display: none;
+}
+.content6{
+ position: absolute;
+ left: 2300px;
+ top: 270px;
+ font-size: 80px;
+ color: rgb(140, 140, 140);
+ transform: rotate(90deg);
+ font-family: 'Century Gothic';
+ display: none;
+}
+.content7{
+ position: absolute;
+ left: 2340px;
+ top: 385px;
+ width: 180px;
+ font-size: 50px;
+ color: rgb(130, 130, 130);
+ font-family: 'Century Gothic';
+ display: none;
+}
+.content8{
+ position: absolute;
+ left: 2410px;
+ width: 700px;
+ top: 370px;
+ font-family: 'Century Gothic';
+ font-size: 20px;
+ color: rgb(160, 160, 160);
+ display: none;
+}
+.content9{
+ position: absolute;
+ left: 2140px;
+ top: 230px;
+ font-family: 'Century Gothic';
+ font-size: 80px;
+ color: rgb(160, 160, 160);
+ width: 700px;
+ display: none;
+}
+.content10{
+ position: absolute;
+ left: 2410px;
+ top: 340px;
+ width: 650px;
+ font-size: 30px;
+ font-family: 'Century Gothic';
+ color: rgb(150, 150, 150);
+ display: none;
+}
+.content11{
+ position: absolute;
+ left: 1980px;
+ top: 15px;
+ width: 750px;
+ font-family: "Century Gothic";
+ font-size: 20px;
+ color: rgb(160, 160, 160);
+ display: none;
+}
+.content12{
+ position: absolute;
+ left: 2460px;
+ top: 250px;
+ width: 280px;
+ font-family: "Century Gothic";
+ font-size: 13px;
+ line-height: 20px;
+ color: rgb(150, 150, 150);
+ display: none;
+}
+.content13{
+ position: absolute;
+ left: 2870px;
+ top: -30px;
+ width: 300px;
+ font-size: 40px;
+ font-family: "Century Gothic";
+ transform: rotate(90deg);
+ color: rgb(120, 120, 120);
+ line-height: 40px;
+ display: none;
+}
+.content14{
+ transform: rotate(90deg);
+ height: 100px;
+ width: 100px;
+ position: absolute;
+ top: 20px;
+ left: 1500px;
+ font-family: "Century Gothic";
+ color:rgb(120, 120, 120);
+ display: none;
+}
+.content15{
+ position: absolute;
+ left: 1880px;
+ top: 105px;
+ font-family: "Century Gothic";
+ font-size: 15px;
+ display: none;
+}
+.content16{
+ position: absolute;
+ left: 850px;
+ top: 15px;
+ font-family: "Century Gothic";
+ font-size: 15px;
+ width: 530px;
+ line-height: 25px;
+ display: none;
+}
+.content17{
+ position: absolute;
+ left: 2860px;
+ top: 220px;
+ width: 400px;
+ display: none;
+}
+.content18{
+ position: absolute;
+ top: 95px;
+ width: 400px;
+ left: 2570px;
+ transform: rotate(-90deg);
+ font-family: "Century Gothic";
+ font-size: 85px;
+ color: rgb(120, 120, 120);
+ display: none;
+}
+.content19{
+ position: absolute;
+ top: 195px;
+ left: 2280px;
+ width: 800px;
+ font-family: "Century Gothic";
+ font-size: 50px;
+ color: rgb(100, 100, 100);
+ display: none;
+}
+.content20{
+ position: absolute;
+ top: 198px;
+ left: 2150px;
+ font-family: "Century Gothic";
+ font-size: 50px;
+ transform: rotate(-180deg);
+ display: none;
+}
+.content21{
+ position: absolute;
+ top: 200px;
+ left: 1980px;
+ width: 760px;
+ font-family: "Century Gothic";
+ font-size: 60px;
+ color: rgb(120, 120, 120);
+ display: none;
+}
+.content22{
+ position: absolute;
+ left: 1675px;
+ top: 110px;
+ width: 700px;
+ font-family: "Century Gothic";
+ font-size: 45px;
+ color: rgb(120, 120, 120);
+ display: none;
+}
+.content23{
+ position: absolute;
+ left: 1610px;
+ top: 10px;
+ width: 100px;
+ font-family: "Century Gothic";
+ font-size: 45px;
+ color: rgb(100, 100, 100);
+ display: none;
+}
+.content24{
+ position: absolute;
+ left: 1500px;
+ top: 120px;
+ width: 800px;
+ font-family: "Century Gothic";
+ font-size: 30px;
+ display: none;
+}
+.content25{
+ width: 200px;
+ position: absolute;
+ left: 1280px;
+ top: 108px;
+ transform: rotate(90deg);
+ font-family: "Century Gothic";
+ font-size: 20px;
+ display: none;
+}
+.content26{
+ position: absolute;
+ left: 1520px;
+ top: 95px;
+ width: 800px;
+ font-family: "Century Gothic";
+ font-size: 25px;
+ color: rgb(100, 100, 100);
+ display: none;
+}
+.content27{
+ position: absolute;
+ left: 1546px;
+ top: 80px;
+ font-family: "Century Gothic";
+ color: rgb(140, 140, 140);
+ display: none;
+}
+.content28{
+ width: 800px;
+ position: absolute;
+ left: 1270px;
+ top: 88px;
+ font-family: "Century Gothic";
+ font-size: 30px;
+ color: rgb(120, 120, 120);
+ display: none;
+}
+.content29{
+ width: 800px;
+ position: absolute;
+ left: 1190px;
+ top: 95px;
+ font-family: "Century Gothic";
+ color: rgb(130, 130, 130);
+ display: none;
+}
+.content30{
+ width: 800px;
+ position: absolute;
+ left: 1130px;
+ top: 98px;
+ font-family: "Century Gothic";
+ font-size: 10px;
+ color: rgb(170, 170, 170);
+ display: none;
+}
+.content31{
+ width: 250px;
+ position: absolute;
+ left: 1600px;
+ top: 370px;
+}
+.content32{
+ width: 775px;
+ position: absolute;
+ top: 400px;
+ left: 20px;
+}
+.content33{
+ width: 200px;
+ position: absolute;
+ left: 1600px;
+ top: 425px;
+}
+.content34{
+ width: 180px;
+ position: absolute;
+ left: 1600px;
+ top: 500px;
+}
+.content35{
+ width: 800px;
+ position: absolute;
+ left: 20px;
+ top: 465px;
+}
+.content36{
+ width: 550px;
+ position: absolute;
+ left: 20px;
+ top: 490px;
+}
+.content37{
+ width: 750px;
+ position: absolute;
+ left: 20px;
+ top: 515px;
+}
+.content38{
+ width: 800px;
+ position: absolute;
+ left: 20px;
+ top: 540px;
+}
+.content39{
+ width: 780px;
+ position: absolute;
+ left: 20px;
+ top: 585px;
+}
+
+
+
+
+
 
 
 
