--- a/project_1_programme/goodluckinnewcountry.css
+++ b/project_1_programme/goodluckinnewcountry.css
@@ -17,9 +17,13 @@ h2{
     font-family:"Avenir";
     font-weight: regular;
     font-size: 18px;
-    margin: 175px;
+    margin: 130px;
     color: white;
     
+}
+
+h2:hover{
+   color: pink;
 }
 
 .smallheadings{
@@ -102,11 +106,11 @@ h6{
 
 p{
     font-family: "Helvetica";
-    font-size: 16px;
+    font-size: 20px;
     width: 850px;
     position: relative;
     bottom: 50px;
-    line-height: 25px;
+    line-height:30px;
 }
 
 .time{
