--- a/project2/project2.css
+++ b/project2/project2.css
@@ -3204,6 +3204,7 @@ p{
 .content15{
  position: absolute;
  left: 1880px;
+ width:80px;
  top: 105px;
  font-family: "Century Gothic";
  font-size: 15px;
