jmail adapts to screen size

--- a/project_1_programme/aboutemma.css
+++ b/project_1_programme/aboutemma.css
@@ -17,7 +17,7 @@ h2{
     font-family:"Avenir";
     font-weight: regular;
     font-size: 18px;
-    margin: 130px;
+    margin: 10%;
     color: white;
     
 }
