--- a/project_1_programme/jmaildesign.css
+++ b/project_1_programme/jmaildesign.css
@@ -1,6 +1,12 @@
 *{
   margin: 0px;
 }
+
+body{
+  width: 100%;
+  height: 100%;
+}
+
 h1{
 	background-color: rgb(145, 29, 29);
 	color: white;
@@ -53,9 +59,9 @@ h4{
 
 .section{
     border: 1px solid #979797;
-    width: 300px;
-    height: 100px;
-    padding: 5px;
+    width: 100%;
+    height: 24.6%;
+    padding: 3%;
     background: white;
 }
 
@@ -65,8 +71,8 @@ h4{
 
 img{
     float: right;
-    width: 967px;
-    height: 967px;
+    width: 75.4%;
+    height: 75.4%;
     border: 1px solid #979797;
 }
 
